--- a/example/docker-compose.yml
+++ b/example/docker-compose.yml
@@ -1,13 +1,10 @@
 master:
   build: ./
-  command: bin/spark-class org.apache.spark.deploy.master.Master -h master
+  command: /spark/bin/spark-class org.apache.spark.deploy.master.Master -h master
   hostname: master
   environment:
     MASTER: spark://master:7077
     SPARK_CONF_DIR: /conf
-    BRICKLANE_CFG_PATH: /code/config
-    PYSPARK_PYTHON: python3.4
-    PYTHONHASHSEED: 0
   expose:
     - 7001
     - 7002
@@ -24,21 +21,19 @@ master:
     - 8080:8080
   volumes:
     - ./config/master:/conf
-    - ../:/code
+    - ./:/code
+    - ~/.aws:/root/.aws
 
 worker:
   build: ./
-  command: bin/spark-class org.apache.spark.deploy.worker.Worker spark://master:7077
+  command: /spark/bin/spark-class org.apache.spark.deploy.worker.Worker spark://master:7077
   hostname: worker
   environment:
     SPARK_CONF_DIR: /conf
-    BRICKLANE_CFG_PATH: /code/config
     SPARK_WORKER_CORES: 2
     SPARK_WORKER_MEMORY: 1g
     SPARK_WORKER_PORT: 8881
     SPARK_WORKER_WEBUI_PORT: 8081
-    PYSPARK_PYTHON: python3.4
-    PYTHONHASHSEED: 0
   links:
     - master
   expose:
@@ -52,4 +47,5 @@ worker:
     - 8081:8081
   volumes:
     - ./config/worker:/conf
-    - ../:/code
+    - ./:/code
+    - ~/.aws:/root/.aws
